[gd_scene load_steps=2 format=3 uid="uid://f0icdjyyta0h"]

[ext_resource type="Script" path="res://scripts/Settings.gd" id="1_ox3m1"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_ox3m1")

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_right = 0.225
anchor_bottom = 0.069
offset_left = 600.0
offset_top = 396.0
offset_right = 785.0
offset_bottom = 495.48
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
metadata/_edit_lock_ = true

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2
metadata/_edit_lock_ = true

[node name="Menu Music volume" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Menu Music Volume"

[node name="MenuMusicSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX volume" type="Label" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SFX Volume"

[node name="SFXvolume" type="HSlider" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[connection signal="value_changed" from="PanelContainer/MarginContainer/GridContainer/MenuMusicSlider" to="." method="_on_menu_music_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="changed" from="PanelContainer/MarginContainer/GridContainer/SFXvolume" to="." method="_on_sf_xvolume_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/GridContainer/SFXvolume" to="." method="_on_sf_xvolume_value_changed"]
